# octoshell

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
src/: command.cpp  command.hpp  main.cpp  parser.cpp  parser.hpp  terminal.cpp  terminal.hpp
tests/: command_test.cpp  parser_test.cpp  terminal_test.cpp
